yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-test
  name: nginx-svc
  namespace: nginx-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-test
  type: ClusterIP
